# CIS4914_Salads_ML

./: .gitignore  README.md  output.txt  requirements.txt
app/: README.md
cli_tool/: main.swift  netparser
configs/: example.yaml  training.yaml  training_2.yaml
data/: calculate_overlap.py
data/experiments/: README.md  active_queries.json  every_two_min.json  idle_connected.json  idle_connected.pcapng  once_per_min.json  twice_per_min.json
data/train/: 1.15_min_and_2_min_v.json  30_sec_1_min_alternate_b.json  active_60_then_idle_b.json  active_60_then_idle_b.pcapng  active_queries.json  alternating_devices_1_min.json  alternating_devices_1_min.pcapng  both_every_1.5_min_v.json  every_75_and_twice_u.json  every_90_every_two_b.json  every_two_min_b.json  idle_connected.json  iphoneActive.json  iphoneActive.pcap  once_per_min.json  staggered_u.json  (+5 more)
ml/: README.md
src/: __init__.py  evaluate.py  evaluate_all.py  infer.py  pyproject.toml  show_trackio.py  train.py  tune.py
src/data/: __init__.py  dataset.py  generate_labels.py  locationsharing_hosts.txt  locationsharing_ips_cache.json  pcap_utils.py
src/models/: __init__.py  convert_coreml.py  mil_tcn.py
src/models/large_v2/: config.yaml
src/models/large_v3/: stats.txt
src/models/medium/: config.yaml
src/models/micro/: config.yaml  stats.txt
src/models/small/: config.yaml
src/models/small_v3/: config.yaml
src/models/small_v4/: config.yaml  stats.txt
src/models/xsmall/: config.yaml  stats.txt
src/models/xxsmall/: config.yaml  stats.txt
src/utils/: __init__.py  config.py  metrics.py  seed.py
(+22 files in other folders)
