[project]
name = "SALADS-ML"
version = "0.1.0"
description = "Machine learning repository for SALADS Senior Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.67.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "trackio",
    "pyyaml",
    "dpkt",
    "coremltools>=9.0",
    "scikit-learn",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
